0.0.2

User Interface:
- Fix About dialog text being replaced by accessibility labels - SetControlAccessibility now stores labels as window properties instead of overwriting visible text

HiDPI Support:
- Add centralized DPI management system with DPIContext and DPIManager structures
- Implement CreateDPIManager and DestroyDPIManager for lifecycle management
- Implement RegisterWindowForDPI and UnregisterWindowForDPI for window tracking
- Implement GetWindowDPI with fallback to GetDpiForWindow API (Windows 10 1607+)
- Implement GetMonitorDPI with fallback to GetDpiForMonitor API (Windows 8.1+)
- Implement GetDPIForPoint for screen location DPI detection
- Implement GetWindowScaleFactor to calculate DPI scale factor
- Add coordinate conversion functions: LogicalToPhysical and PhysicalToLogical
- Add rectangle conversion functions: LogicalRectToPhysical and PhysicalRectToLogical
- Implement ScaleValueForDPI and ScaleValueForDPIFloat for value scaling
- Replace GetDpiForWindowSafe calls with GetWindowDPI in dialogs.c
- Add global g_dpiManager variable for centralized DPI management
- Add dpi.c and dpi.h module to build system
- Implement InitializeDPIAwareness function with per-monitor DPI awareness v2 support
- Add fallback chain: Per-Monitor V2 → Per-Monitor V1 → Windows 8.1 API → Vista/7 API
- Replace SetProcessDPIAware with InitializeDPIAwareness in main.c
- Initialize global DPI manager on application startup
- Add DPI manager cleanup on application exit
- Implement dynamic DPI change handling with WM_DPICHANGED message support
- Implement RescaleWindowForDPI function to rescale all child controls on DPI change
- Add WM_DPICHANGED handler to main window (DialogProc) for per-monitor DPI awareness
- Add WM_DPICHANGED handler to UnifiedDialogProc for dialog DPI changes
- Add WM_DPICHANGED handler to EnhancedErrorDialogProc for error dialog DPI changes
- Add WM_DPICHANGED handler to SettingsDialogProc for settings dialog DPI changes